// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Slider2 Snapshots className should be className 1`] = `
<input
  class="brz-input brz-ed-control--slider2 className"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots max should be -10 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  max="-10"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots max should be 0 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  max="0"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots max should be 10 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  max="10"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots min should be -5 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  min="-5"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots min should be 0 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  min="0"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots min should be 5 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  min="5"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots step should be 5 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  step="5"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots value should be -1 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  type="range"
  value="-1"
/>
`;

exports[`Test Slider2 Snapshots value should be 0 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  type="range"
  value="0"
/>
`;

exports[`Test Slider2 Snapshots value should be 1 1`] = `
<input
  class="brz-input brz-ed-control--slider2"
  type="range"
  value="1"
/>
`;
